--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,13 +8,9 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <header
-            class="flex justify-center items-center bg-gray-800 text-white h-16 text-2xl"
+        <main
+            class="min-h-[calc(100vh-8rem)] flex flex-col items-center justify-center"
         >
-            <h1>API Port Russell</h1>
-        </header>
-
-        <main class="min-h-[calc(100vh-8rem)] flex flex-col items-center justify-center">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <section
                     class="flex flex-col items-center justify-center p-4 text-center gap-4"
@@ -24,14 +20,20 @@
                         Cette API permet de gérer les catways, les réservations
                         et les utilisateurs.
                     </p>
-                    <a class="underline text-blue-500" href="#">Documentation de l'API</a>
+                    <a class="underline text-blue-500" href="#"
+                        >Documentation de l'API</a
+                    >
                 </section>
 
                 <section
                     class="flex flex-col items-center justify-center p-4 gap-4"
                 >
                     <h2 class="text-2xl">Connexion</h2>
-                    <form action="/api/users/login" method="post" class="flex flex-col gap-4 border border-gray-300 rounded p-4">
+                    <form
+                        action="/api/users/login"
+                        method="post"
+                        class="flex flex-col gap-4 border border-gray-300 rounded p-4"
+                    >
                         <div class="flex flex-col gap-2">
                             <label class="text-lg" for="email">Email</label>
                             <input
@@ -43,7 +45,9 @@
                             />
                         </div>
                         <div class="flex flex-col gap-2">
-                            <label class="text-lg" for="password">Mot de passe</label>
+                            <label class="text-lg" for="password"
+                                >Mot de passe</label
+                            >
                             <input
                                 class="border border-gray-300 rounded p-2"
                                 type="password"
@@ -62,11 +66,5 @@
                 </section>
             </div>
         </main>
-
-        <footer
-            class="flex justify-center items-center bg-gray-800 text-white h-16"
-        >
-            <p>© 2025 API Port Russell. Tous droits réservés.</p>
-        </footer>
     </body>
 </html>
