--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -4,10 +4,75 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title><%= title %></title>
+        <link rel="stylesheet" href="/css/style.css" />
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <header>
-            <h1>Dashboard</h1>
-        </header>
+        <div class="flex flex-col md:flex-row">
+            <aside
+                class="flex justify-center items-center h-[calc(100vh-8rem)] pt-12 bg-gray-200 w-full md:h-screen md:w-64"
+            >
+                <nav aria-label="Navigation principale">
+                    <ul class="flex flex-col gap-10">
+                        <li>
+                            <a class="text-blue-500" href="/dashboard"
+                                >Dashboard</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="hover:text-blue-500 hover:underline"
+                                href="/catways"
+                                >Catways</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="hover:text-blue-500 hover:underline"
+                                href="/reservations"
+                                >Reservations</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="hover:text-blue-500 hover:underline"
+                                href="/users"
+                                >Users</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="hover:text-blue-500 hover:underline"
+                                href="#"
+                                >Documentation de l'API</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="text-red-500 hover:underline"
+                                href="/logout"
+                                >Se deconnecter</a
+                            >
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+
+            <main class="w-full flex flex-col gap-10 p-4">
+                <h1 class="flex justify-center text-2xl font-bold">
+                    Dashboard
+                </h1>
+                <section class="flex flex-col gap-2">
+                    <h2 class="text-xl underline font-bold">Profile</h2>
+                    <p>Username: <strong><%= user.username %></strong></p>
+                    <p>Email: <strong><%= user.email %></strong></p>
+                    <p>Date : <strong><%= formattedDate %></strong></p>
+                </section>
+
+                <section>
+                    <h2 class="text-xl underline font-bold">Reservations</h2>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
