--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -48,7 +48,7 @@
                         <li class="p-2">
                             <a
                                 class="text-red-500 hover:text-red-600 hover:underline"
-                                href="/logout"
+                                href="/api/users/logout"
                                 >Se deconnecter</a
                             >
                         </li>
