--- a/src/views/catways.ejs
+++ b/src/views/catways.ejs
@@ -137,7 +137,7 @@
                             >
                                 <td colspan="4" class="p-2">
                                     <form
-                                        action="/api/catways/<%= catways.catwayNumber %>"
+                                        action="/api/catways/<%= catways.catwayNumber %>?_method=PUT"
                                         method="POST"
                                     >
                                         <input
