--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -11,7 +11,7 @@
         <div class="flex flex-col md:flex-row gap-8 md:gap-0">
             <!-- SIDEBAR -->
             <aside
-                class="flex justify-center items-center h-[calc(100vh-8rem)] pt-12 bg-gray-200 w-full md:h-screen md:w-64"
+                class="flex justify-center items-center h-[calc(100vh-8rem)] pt-12 bg-gray-200 border-r border-b border-gray-400 rounded-b-xl w-full md:h-screen md:w-64"
             >
                 <nav aria-label="Navigation principale">
                     <ul class="flex flex-col gap-4">
