--- a/src/views/catways.ejs
+++ b/src/views/catways.ejs
@@ -72,34 +72,32 @@
                     <form
                         action="/api/catways"
                         method="POST"
-                        class="flex flex-col max-w-6xl gap-4 mx-auto border border-gray-900 p-4 rounded items-center"
+                        class="flex flex-col items-center gap-4 border border-gray-900 text-center rounded max-w-6xl mx-auto p-4"
                     >
-                        <div class="flex items-center gap-4">
-                            <label for="catwayNumber">Numéro du catway :</label>
-                            <input
-                                type="number"
-                                id="catwayNumber"
-                                name="catwayNumber"
-                                required
-                                class="border border-gray-900 p-2 rounded"
-                            />
-                            <label for="catwayType">Type de catway :</label>
-                            <input
-                                type="text"
-                                id="catwayType"
-                                name="catwayType"
-                                required
-                                class="border border-gray-900 p-2 rounded"
-                            />
-                            <label for="catwayState">État du catway :</label>
-                            <input
-                                type="text"
-                                id="catwayState"
-                                name="catwayState"
-                                required
-                                class="border border-gray-900 p-2 rounded"
-                            />
-                        </div>
+                        <label for="catwayNumber">Numéro du catway :</label>
+                        <input
+                            type="number"
+                            id="catwayNumber"
+                            name="catwayNumber"
+                            required
+                            class="border border-gray-900 p-2 rounded"
+                        />
+                        <label for="catwayType">Type de catway :</label>
+                        <input
+                            type="text"
+                            id="catwayType"
+                            name="catwayType"
+                            required
+                            class="border border-gray-900 p-2 rounded"
+                        />
+                        <label for="catwayState">État du catway :</label>
+                        <input
+                            type="text"
+                            id="catwayState"
+                            name="catwayState"
+                            required
+                            class="border border-gray-900 p-2 rounded"
+                        />
                         <button
                             type="submit"
                             class="bg-blue-500 text-white p-2 rounded"
@@ -168,12 +166,18 @@
                                     <!-- END MODIFIER -->
 
                                     <!-- SUPPRIMER -->
-                                    <button
-                                        type="submit"
-                                        class="text-red-500 hover:underline"
+                                    <form
+                                        action="/api/catways/<%= catways.catwayNumber %>?_method=DELETE"
+                                        method="POST"
+                                        onsubmit="return confirm('Voulez-vous vraiment supprimer ce catway ?');"
                                     >
-                                        Supprimer
-                                    </button>
+                                        <button
+                                            type="submit"
+                                            class="text-red-500 hover:underline"
+                                        >
+                                            Supprimer
+                                        </button>
+                                    </form>
                                     <!-- END SUPPRIMER -->
                                 </td>
                             </tr>
