--- a/src/views/catways.ejs
+++ b/src/views/catways.ejs
@@ -72,32 +72,34 @@
                     <form
                         action="/api/catways"
                         method="POST"
-                        class="flex flex-col items-center gap-4 border border-gray-900 text-center rounded max-w-6xl mx-auto p-4"
+                        class="flex flex-col items-center gap-6 border border-gray-900 text-center rounded max-w-6xl mx-auto p-6"
                     >
-                        <label for="catwayNumber">Numéro du catway :</label>
-                        <input
-                            type="number"
-                            id="catwayNumber"
-                            name="catwayNumber"
-                            required
-                            class="border border-gray-900 p-2 rounded"
-                        />
-                        <label for="catwayType">Type de catway :</label>
-                        <input
-                            type="text"
-                            id="catwayType"
-                            name="catwayType"
-                            required
-                            class="border border-gray-900 p-2 rounded"
-                        />
-                        <label for="catwayState">État du catway :</label>
-                        <input
-                            type="text"
-                            id="catwayState"
-                            name="catwayState"
-                            required
-                            class="border border-gray-900 p-2 rounded"
-                        />
+                        <div class="grid grid-cols-2 gap-4">
+                            <label for="catwayNumber">Numéro du catway :</label>
+                            <input
+                                type="number"
+                                id="catwayNumber"
+                                name="catwayNumber"
+                                required
+                                class="border border-gray-900 p-2 rounded"
+                            />
+                            <label for="catwayType">Type de catway :</label>
+                            <input
+                                type="text"
+                                id="catwayType"
+                                name="catwayType"
+                                required
+                                class="border border-gray-900 p-2 rounded"
+                            />
+                            <label for="catwayState">État du catway :</label>
+                            <input
+                                type="text"
+                                id="catwayState"
+                                name="catwayState"
+                                required
+                                class="border border-gray-900 p-2 rounded"
+                            />
+                        </div>
                         <button
                             type="submit"
                             class="bg-blue-500 text-white p-2 rounded"
