Implémentation du formulaire de modification des réservations

--- a/src/views/catways.ejs
+++ b/src/views/catways.ejs
@@ -225,6 +225,7 @@
                                     </form>
                                 </td>
                             </tr>
+                            <!-- END EDIT FORM -->
                             <% }) %>
                         </tbody>
                     </table>
